# squirrel

./: CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md
src/: app.rs  db.rs  main.rs  models.rs  storage.rs  ui.rs
