[package]
name = "squirrel"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
