[package]
name = "squirrel"
version = "0.3.0"
edition = "2024"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
serde_json = "1"
uuid = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
